- Commit the final copy

--- a/M1_Assignment/Namrata_Patel_NLP_Assignment_Part_1.ipynb
+++ b/M1_Assignment/Namrata_Patel_NLP_Assignment_Part_1.ipynb
@@ -132,7 +132,7 @@
         {
           "data": {
             "text/plain": [
-              "<git.repo.base.Repo 'd:\\\\content\\\\m1_repo\\\\.git'>"
+              "<git.repo.base.Repo 'd:\\\\content\\\\m1_repo1\\\\.git'>"
             ]
           },
           "execution_count": 3,
@@ -150,7 +150,7 @@
         "\n",
         "# Clone the GitHub repository\n",
         "repo_url = 'https://github.com/Natural-Language-Processing-YU/Module-1-Assignment.git'\n",
-        "repo_dir = '/content/m1_repo'  # Specify the directory to clone the repository\n",
+        "repo_dir = '/content/m1_repo1'  # Specify the directory to clone the repository\n",
         "git.Repo.clone_from(repo_url, repo_dir)\n",
         "# Add the cloned repository directory to the import path\n",
         "\n"
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -240,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -282,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -351,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
         "id": "8ZoSOGaW2koc"
       },
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -382,8 +382,8 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to\n",
-            "[nltk_data]     C:\\Users\\msnam\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+            "[nltk_data]     C:\\Users\\Namrata\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
           ]
         },
         {
@@ -392,7 +392,7 @@
               "True"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -415,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
         "id": "QD2ub7Dl2koe"
       },
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -501,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -546,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {
         "id": "Nwq8pacZrLXg"
       },
@@ -587,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {
         "id": "frUPXf542koh"
       },
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 16,
       "metadata": {
         "id": "YjioQEB12koh",
         "outputId": "d51f755d-83d4-4730-acb0-308485ad3ab7"
@@ -677,35 +677,35 @@
               "      <td>849636868052275200</td>\n",
               "      <td>2017-04-05 14:56:29</td>\n",
               "      <td>b'And so the robots spared humanity ... https:...</td>\n",
-              "      <td>robot spare human ...</td>\n",
+              "      <td>[robot, spare, human, ...]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>848988730585096192</td>\n",
               "      <td>2017-04-03 20:01:01</td>\n",
               "      <td>b\"@ForIn2020 @waltmossberg @mims @defcon_5 Exa...</td>\n",
-              "      <td>exactli tesla absurdli overvalu base past that...</td>\n",
+              "      <td>[exactli, tesla, absurdli, overvalu, base, pas...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>848943072423497728</td>\n",
               "      <td>2017-04-03 16:59:35</td>\n",
               "      <td>b'@waltmossberg @mims @defcon_5 Et tu, Walt?'</td>\n",
-              "      <td>et tu walt</td>\n",
+              "      <td>[et, tu, walt]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>848935705057280001</td>\n",
               "      <td>2017-04-03 16:30:19</td>\n",
               "      <td>b'Stormy weather in Shortville ...'</td>\n",
-              "      <td>stormi weather shortvil ...</td>\n",
+              "      <td>[stormi, weather, shortvil, ...]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>848416049573658624</td>\n",
               "      <td>2017-04-02 06:05:23</td>\n",
               "      <td>b\"@DaveLeeBBC @verge Coal is dying due to nat ...</td>\n",
-              "      <td>coal die due nat ga frack basic dead</td>\n",
+              "      <td>[coal, die, due, nat, ga, frack, basic, dead]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -719,35 +719,35 @@
               "      <td>142881284019060736</td>\n",
               "      <td>2011-12-03 08:22:07</td>\n",
               "      <td>b'That was a total non sequitur btw'</td>\n",
-              "      <td>total non sequitur btw</td>\n",
+              "      <td>[total, non, sequitur, btw]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2815</th>\n",
               "      <td>142880871391838208</td>\n",
               "      <td>2011-12-03 08:20:28</td>\n",
               "      <td>b'Great Voltaire quote, arguably better than T...</td>\n",
-              "      <td>great voltair quot arguabl better twain hear n...</td>\n",
+              "      <td>[great, voltair, quot, arguabl, better, twain,...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2816</th>\n",
               "      <td>142188458125963264</td>\n",
               "      <td>2011-12-01 10:29:04</td>\n",
               "      <td>I made the volume on the Model S  go to 11.  N...</td>\n",
-              "      <td>made volum model go 11 need work miniatur ston...</td>\n",
+              "      <td>[made, volum, model, go, 11, need, work, minia...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2817</th>\n",
               "      <td>142179928203460608</td>\n",
               "      <td>2011-12-01 09:55:11</td>\n",
               "      <td>b\"Went to Iceland on Sat to ride bumper cars o...</td>\n",
-              "      <td>went iceland sat ride bumper car ice countri v...</td>\n",
+              "      <td>[went, iceland, sat, ride, bumper, car, ice, c...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2818</th>\n",
               "      <td>15434727182</td>\n",
               "      <td>2010-06-04 18:31:57</td>\n",
               "      <td>b'Please ignore prior tweets, as that was some...</td>\n",
-              "      <td>pleas ignor prior tweet someon pretend :) actual</td>\n",
+              "      <td>[pleas, ignor, prior, tweet, someon, pretend, ...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -782,17 +782,17 @@
               "2818  b'Please ignore prior tweets, as that was some...   \n",
               "\n",
               "                                    preprocessed_tweets  \n",
-              "0                                 robot spare human ...  \n",
-              "1     exactli tesla absurdli overvalu base past that...  \n",
-              "2                                            et tu walt  \n",
-              "3                           stormi weather shortvil ...  \n",
-              "4                  coal die due nat ga frack basic dead  \n",
+              "0                            [robot, spare, human, ...]  \n",
+              "1     [exactli, tesla, absurdli, overvalu, base, pas...  \n",
+              "2                                        [et, tu, walt]  \n",
+              "3                      [stormi, weather, shortvil, ...]  \n",
+              "4         [coal, die, due, nat, ga, frack, basic, dead]  \n",
               "...                                                 ...  \n",
-              "2814                             total non sequitur btw  \n",
-              "2815  great voltair quot arguabl better twain hear n...  \n",
-              "2816  made volum model go 11 need work miniatur ston...  \n",
-              "2817  went iceland sat ride bumper car ice countri v...  \n",
-              "2818   pleas ignor prior tweet someon pretend :) actual  \n",
+              "2814                        [total, non, sequitur, btw]  \n",
+              "2815  [great, voltair, quot, arguabl, better, twain,...  \n",
+              "2816  [made, volum, model, go, 11, need, work, minia...  \n",
+              "2817  [went, iceland, sat, ride, bumper, car, ice, c...  \n",
+              "2818  [pleas, ignor, prior, tweet, someon, pretend, ...  \n",
               "\n",
               "[2819 rows x 4 columns]"
             ]
@@ -808,15 +808,23 @@
         "\n",
         "for i in len(df):\n",
         "  df[\"preprocessed_tweet\"][i] = preprocess_tweet(df[\"text\"][i])\n",
-        "\n",
-        "\n",
         "\"\"\"\n",
+        "\n",
         "# Apply preprocess_tweet to each tweet in the dataframe using a loop\n",
+        "\n",
+        "# Get List of Tweets for all tweets\n",
+        "tweet_list = []\n",
+        "\n",
         "for i in range(len(df)):\n",
-        "    df.at[i, 'preprocessed_tweets'] = ' '.join(preprocess_tweet(df.at[i, 'text'])) # Joins the generated tokens with white space..\n",
+        "    stemmed_tokens = preprocess_tweet(df.at[i, 'text']) # get tokens after preprocess tweet\n",
+        "    tweet_list.append(stemmed_tokens)\n",
+        "\n",
+        "# Add the preprocessed tweets list to the DataFrame\n",
+        "df['preprocessed_tweets'] = tweet_list\n",
         "\n",
         "# Display the DataFrame\n",
         "display(df)\n",
+        "\n",
         "### END CODE HERE ###"
       ]
     },
@@ -847,7 +855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 17,
       "metadata": {
         "id": "teSaHxFCykFP"
       },
@@ -914,6 +922,15 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### References\n",
+        "\n",
+        "https://www.geeksforgeeks.org/n-gram-language-modelling-with-nltk/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9a5gh6B-2kok"
       },
@@ -960,7 +977,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.9.12"
     }
   },
   "nbformat": 4,
