- TextBlog - Multinomial NB

--- a/Bag_of_Words_Teach Back.ipynb
+++ b/Bag_of_Words_Teach Back.ipynb
@@ -71,20 +71,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "(<5x22 sparse matrix of type '<class 'numpy.int64'>'\n",
-              " \twith 24 stored elements in Compressed Sparse Row format>,\n",
-              " ['spam', 'spam', 'not spam', 'not spam', 'spam'])"
-            ]
-          },
-          "execution_count": 17,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Predictions: ['spam' 'spam']\n"
+          ]
         }
       ],
       "source": [
@@ -107,22 +102,6 @@
         "X = vectorizer.fit_transform(documents)\n",
         "y = labels\n",
         "\n",
-        "X , y\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "# Split the data into training and testing sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n",
@@ -133,6 +112,62 @@
         "# Predict the labels for the test data\n",
         "predictions = classifier.predict(X_test)\n",
         "print(\"Predictions:\", predictions)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Document Classficiation Using Multinomial Naive Bayes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 1.00\n"
+          ]
+        }
+      ],
+      "source": [
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# Sample documents and their corresponding labels (e.g., positive or negative)\n",
+        "documents = [\n",
+        "    \"I love this movie. It is fantastic!\",\n",
+        "    \"Absolutely terrible. I will never watch this again.\",\n",
+        "    \"Best film ever. I highly recommend it.\",\n",
+        "    \"Awful. Complete waste of time.\",\n",
+        "    \"I enjoyed this movie. It was great!\"\n",
+        "]\n",
+        "labels = ['positive', 'negative', 'positive', 'negative', 'positive']\n",
+        "\n",
+        "# Convert the documents into a Bag of Words model\n",
+        "vectorizer = CountVectorizer()\n",
+        "X = vectorizer.fit_transform(documents)\n",
+        "y = labels\n",
+        "\n",
+        "# Split the data into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "\n",
+        "# Train a Multinomial Naive Bayes classifier on the training data\n",
+        "classifier = MultinomialNB()\n",
+        "classifier.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the labels for the test data\n",
+        "predictions = classifier.predict(X_test)\n",
+        "\n",
+        "# Calculate the accuracy of the predictions\n",
+        "accuracy = accuracy_score(y_test, predictions)\n",
+        "print(f\"Accuracy: {accuracy:.2f}\")\n"
       ]
     },
     {
@@ -183,6 +218,72 @@
         "new_review_vectorized = vectorizer.transform([new_review])\n",
         "prediction = classifier.predict(new_review_vectorized)\n",
         "print(\"Prediction for new review:\", prediction)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Sentiment Analaysis using TextBlob"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Review: I love this product. It is amazing!\n",
+            "Vector: [1 0 0 0 0 0 0 0 0 0 0 0 1 1 0 1 0 0 0 1 0 0 0 0 0 1 0 0 0]\n",
+            "Sentiment: Positive\n",
+            "\n",
+            "Review: Terrible service. I will never come back.\n",
+            "Vector: [0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1 1 0 0 0 0 1 0]\n",
+            "Sentiment: Negative\n",
+            "\n",
+            "Review: The food was delicious. Highly recommend!\n",
+            "Vector: [0 0 0 1 0 0 0 0 1 0 0 1 0 0 0 0 0 0 0 0 1 0 0 1 0 0 1 0 0]\n",
+            "Sentiment: Positive\n",
+            "\n",
+            "Review: Worst experience ever. Do not go there.\n",
+            "Vector: [0 0 0 0 1 0 1 1 0 1 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 1]\n",
+            "Sentiment: Negative\n",
+            "\n",
+            "Review: Great movie. I enjoyed it a lot!\n",
+            "Vector: [0 0 0 0 0 1 0 0 0 0 1 0 0 1 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "Sentiment: Positive\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "from textblob import TextBlob\n",
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "\n",
+        "# Sample reviews\n",
+        "reviews = [\n",
+        "    \"I love this product. It is amazing!\",\n",
+        "    \"Terrible service. I will never come back.\",\n",
+        "    \"The food was delicious. Highly recommend!\",\n",
+        "    \"Worst experience ever. Do not go there.\",\n",
+        "    \"Great movie. I enjoyed it a lot!\"\n",
+        "]\n",
+        "\n",
+        "# Convert the reviews into a Bag of Words model\n",
+        "vectorizer = CountVectorizer()\n",
+        "X = vectorizer.fit_transform(reviews)\n",
+        "\n",
+        "# Analyze the sentiment of each review\n",
+        "for review, vector in zip(reviews, X.toarray()):\n",
+        "    blob = TextBlob(review)\n",
+        "    sentiment = blob.sentiment.polarity\n",
+        "    print(f\"Review: {review}\")\n",
+        "    print(f\"Vector: {vector}\")\n",
+        "    print(f\"Sentiment: {'Positive' if sentiment > 0 else 'Negative' if sentiment < 0 else 'Neutral'}\")\n",
+        "    print()\n"
       ]
     }
   ],
