--- a/Bag_of_Words_Teach Back.ipynb
+++ b/Bag_of_Words_Teach Back.ipynb
@@ -12,29 +12,91 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Vocabulary: ['cat' 'chased' 'dog' 'log' 'mat' 'on' 'sat' 'the']\n",
-            "Bag of Words Matrix:\n",
-            " [[1 0 0 0 1 1 1 2]\n",
-            " [0 0 1 1 0 1 1 2]\n",
-            " [1 1 1 0 0 0 0 2]]\n"
+            "Vocabulary: ['awesome' 'bad' 'good' 'is' 'it' 'not' 'this']\n"
           ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Document</th>\n",
+              "      <th>Tokens</th>\n",
+              "      <th>Word Vector ['awesome' 'bad' 'good' 'is' 'it' 'not' 'this']</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>This is good, is it not?</td>\n",
+              "      <td>[This, is, good,, is, it, not?]</td>\n",
+              "      <td>[0, 0, 1, 2, 1, 1, 1]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>This is bad</td>\n",
+              "      <td>[This, is, bad]</td>\n",
+              "      <td>[0, 1, 0, 1, 0, 0, 1]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>This is awesome</td>\n",
+              "      <td>[This, is, awesome]</td>\n",
+              "      <td>[1, 0, 0, 1, 0, 0, 1]</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                   Document                           Tokens  \\\n",
+              "0  This is good, is it not?  [This, is, good,, is, it, not?]   \n",
+              "1               This is bad                  [This, is, bad]   \n",
+              "2           This is awesome              [This, is, awesome]   \n",
+              "\n",
+              "  Word Vector ['awesome' 'bad' 'good' 'is' 'it' 'not' 'this']  \n",
+              "0                              [0, 0, 1, 2, 1, 1, 1]           \n",
+              "1                              [0, 1, 0, 1, 0, 0, 1]           \n",
+              "2                              [1, 0, 0, 1, 0, 0, 1]           "
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "import pandas as pd\n",
         "\n",
         "# Define the documents\n",
         "documents = [\n",
-        "    \"The cat sat on the mat.\",\n",
-        "    \"The dog sat on the log.\",\n",
-        "    \"The cat chased the dog.\"\n",
+        "    \"This is good, is it not?\",\n",
+        "    \"This is bad\",\n",
+        "    \"This is awesome\"\n",
         "]\n",
         "\n",
         "# Initialize the CountVectorizer\n",
@@ -46,10 +108,23 @@
         "# Get the feature names (vocabulary)\n",
         "vocabulary = vectorizer.get_feature_names_out()\n",
         "\n",
-        "# Convert the matrix to an array and print the result\n",
+        "# Convert the matrix to an array\n",
         "bow_array = bow_matrix.toarray()\n",
+        "\n",
         "print(\"Vocabulary:\", vocabulary)\n",
-        "print(\"Bag of Words Matrix:\\n\", bow_array)\n"
+        "\n",
+        "# Create a list of dictionaries for each document\n",
+        "data = []\n",
+        "for i, doc in enumerate(documents):\n",
+        "    tokens = doc.split()  # Simple tokenization (may not handle punctuation properly)\n",
+        "    word_vector = bow_array[i]\n",
+        "    data.append({\"Document\": doc, \"Tokens\": tokens, f\"Word Vector {vocabulary}\": word_vector})\n",
+        "\n",
+        "# Create a DataFrame from the list of dictionaries\n",
+        "df = pd.DataFrame(data)\n",
+        "\n",
+        "# Print the DataFrame\n",
+        "df\n"
       ]
     },
     {
@@ -71,14 +146,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Predictions: ['spam' 'spam']\n"
+            "Prediction for new email: ['not spam']\n"
           ]
         }
       ],
@@ -109,16 +184,20 @@
         "classifier = MultinomialNB()\n",
         "classifier.fit(X_train, y_train)\n",
         "\n",
-        "# Predict the labels for the test data\n",
-        "predictions = classifier.predict(X_test)\n",
-        "print(\"Predictions:\", predictions)\n"
+        "# Predict the spam/ham for a new email\n",
+        "new_email = \"win a lottery\"\n",
+        "#new_email = \"a leave application\"\n",
+        "\n",
+        "new_email_vectorized = vectorizer.transform([new_email])\n",
+        "prediction = classifier.predict(new_email_vectorized)\n",
+        "print(\"Prediction for new email:\", prediction)\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Document Classficiation Using Multinomial Naive Bayes"
+        "## Document Classficiation Example 2"
       ]
     },
     {
@@ -130,7 +209,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Accuracy: 1.00\n"
+            "Prediction for new review: ['positive']\n"
           ]
         }
       ],
@@ -138,7 +217,6 @@
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.naive_bayes import MultinomialNB\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import accuracy_score\n",
         "\n",
         "# Sample documents and their corresponding labels (e.g., positive or negative)\n",
         "documents = [\n",
@@ -146,9 +224,10 @@
         "    \"Absolutely terrible. I will never watch this again.\",\n",
         "    \"Best film ever. I highly recommend it.\",\n",
         "    \"Awful. Complete waste of time.\",\n",
+        "    \"Such a bad movie\",\n",
         "    \"I enjoyed this movie. It was great!\"\n",
         "]\n",
-        "labels = ['positive', 'negative', 'positive', 'negative', 'positive']\n",
+        "labels = ['positive', 'negative', 'positive', 'negative','negative', 'positive']\n",
         "\n",
         "# Convert the documents into a Bag of Words model\n",
         "vectorizer = CountVectorizer()\n",
@@ -162,12 +241,13 @@
         "classifier = MultinomialNB()\n",
         "classifier.fit(X_train, y_train)\n",
         "\n",
-        "# Predict the labels for the test data\n",
-        "predictions = classifier.predict(X_test)\n",
+        "new_review = \"a horrible movie\"\n",
+        "#new_review = \"great music\"\n",
         "\n",
-        "# Calculate the accuracy of the predictions\n",
-        "accuracy = accuracy_score(y_test, predictions)\n",
-        "print(f\"Accuracy: {accuracy:.2f}\")\n"
+        "new_review_vectorized = vectorizer.transform([new_review])\n",
+        "prediction = classifier.predict(new_review_vectorized)\n",
+        "print(\"Prediction for new review:\", prediction)\n",
+        "\n"
       ]
     },
     {
@@ -308,7 +388,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.10.13"
     },
     "toc": {
       "base_numbering": 1,
